<resources>
    <string name="low_banner_ad_unit_id">ca-app-pub-4015379103470952~9117146821</string>
    <string name="app_name">Rala</string>
    <string name="MenuTitle_RepeatList">Repeat</string>
    <string name="delete">Delete</string>
    <string name="text_zero_min_zero_sec">--:--</string>
    <string name="set_playback_start">Start Point</string>
    <string name="set_playback_end">End Point</string>
    <string name="loop">Loop One</string>
    <string name="abrepeat">ABRepeat</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="add">Add</string>
    <string name="add_dialogbutton">Add</string>
    <string name="this_song_is_the_last_song">It is the last music</string>
    <string name="play_list_is_empty">Playlist is empty</string>
    <string name="has_same_playlist_name">I have a same playlist</string>
    <string name="title_select_play_list">Please select a playlist to add this music</string>
    <string name="choice_playlist">Yes</string>
    <string name="addplaylist">Playlist</string>
    <string name="addPlaylistMsg">Please insert the name of playlist</string>
    <string name="has_no_playable_item">No music to play</string>
    <string name="abrepeatlist_is_empty">No AB Repeat to play</string>
    <string name="playlist_is_removed">Remove Playlist "playlistname"</string>
    <string name="playitem_is_removed">\u0022#_#_#\u0022 Deleted</string>
    <string name="has_no_playlist">There is no playlist to add a music</string>
    <string name="go_to_google_play">Rating and Comments</string>
    <string name="show_advertise">Advertisement</string>
    <string name="go_to_developer">Developer\'s Homepage</string>
    <string name="file_is_nothing_or_broken">Removed or corrupted music</string>
    <string name="exit_app">Exit</string>
    <string name="really_want_to_close_app">Are you sure you want to quit the Rala?</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="AllFile">ALL</string>
    <string name="Album">Album</string>
    <string name="folder">FOLDER</string>
    <string name="TITLE_REPEAT">REPEAT</string>
    <string name="TITLE_PLAYER">PLAYER</string>
    <string name="TITLE_PLAYLIST">LIST</string>
    <string name="playlist">PLAYLIST</string>
    <string name="wait_load_adv">advertisement is loading</string>ㅉ
    <string name="select_play_item">Please select a music to play</string>
    <string name="no_abrepeat_data_available">This music have no AB Repeat. Please Add AB Repeat on Player.</string>
    <string name="no_curretplaylist_data_available">There is no playable music. Please add music to play.</string>
    <string name="play_this_folder">Play this folder</string>
    <string name="folder_is_playing">Music in \u0022#_#_#\u0022 folder is playing</string>
    <string name="add_to_playlist">Add to playlist</string>
    <string name="play_playlist">Play playlist</string>
    <string name="playlist_is_playing">\u0022#_#_#\u0022 is playing</string>
    <string name="thank_you_for_using_this_app_do_you_want_to_exit_app">Thank you for using. Do you want to exit the app?</string>
    <string name="no_abrepeat_infrontof_currentposition">There is no ABRepeat before current position</string>
    <string name="no_abrepeat_next_currentposition">There is no ABRepeat next of current position</string>
    <string name="no_audio_file_in_this_device">No audio file in this device</string>
    <string name="next_repeat">Next Repeat</string>
    <string name="previous_repeat">Previous Repeat</string>
    <string name="previous">Previous Audio</string>
    <string name="next">Next Audio</string>
    <string name="stop">Stop</string>
    <string name="cannotPauseWhenIncoming">Without this permission, you can not pause music when you receive a call</string>
    <string name="move_to_library">Show Library</string>
    <string name="setstartpointforplaystate">Please specify the repeat section during music play</string>
    <string name="search">search</string>
    <string name="has_no_playlist_in_mediastore">There is no Playlist. Please add new playlist.</string>
    <string name="happy_with_rala">Ralala with Rala</string>
    <string name="channel_description">Rala Notification Player</string>
    <string name="noti_player_name">Rala Notification Player</string>
</resources>