<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@color/player_background"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:weightSum="100">

                    <TextView
                        android:id="@+id/textCurrentMin"
                        style="@style/TimeLabel"
                        android:layout_weight="15"
                        android:hint="@string/text_zero_min_zero_sec"></TextView>

                    <workshop.soso.jickjicke.ui.PlayerSeekbar
                        android:id="@+id/playingSeekBarFirst"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="85" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_margin="0dp"
                    android:layout_weight="1"
                    android:weightSum="100">

                    <workshop.soso.jickjicke.ui.PlayerSeekbar
                        android:id="@+id/playingSeekBarSecond"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="85" />

                    <TextView
                        android:id="@+id/textTotalMin"
                        style="@style/TimeLabel"
                        android:layout_weight="15"
                        android:hint="@string/text_zero_min_zero_sec">
                        <!-- style="@style/MainPlayerFont" -->
                    </TextView>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


    <!-- 2X4 Buttons -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="2"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/CardviewMode"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="1dp"
            android:layout_marginTop="1dp"
            android:layout_weight="1"
            android:clickable="false"
            android:textColor="@color/player_button_text_color"
            card_view:cardBackgroundColor="@color/white"
            card_view:cardCornerRadius="0dp">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SwitchLabel"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/loop" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/loopsiwtch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SwitchLabel"
                android:layout_gravity="bottom"
                android:layout_marginBottom="20dp"
                android:gravity="center_vertical"
                android:text="@string/abrepeat" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/repeatsiwtch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/loopsiwtch"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="20dp"
                android:layout_marginRight="20dp"
                android:gravity="center_vertical" />
            <!--    나중에 살리자
            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/random"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/randomsiwtch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Random" />
            -->


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonRepeatMode"
            style="@style/PlayerButton"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/buttonName"
                    style="@style/PlayButtonLabel"
                    android:text="@string/set_playback_start" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_add_location_black_24dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="2"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonPreviousRepeat"
            style="@style/PlayerButton"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    style="@style/PlayButtonLabel"
                    android:text="@string/previous_repeat" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_fast_rewind_black_48dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonNextRepeat"
            style="@style/PlayerButton"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:weightSum="2">

                <TextView
                    style="@style/PlayButtonLabel"
                    android:text="@string/next_repeat" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_fast_forward_black_48dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:layout_weight="2"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonPrevious"
            style="@style/PlayerButton"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/PlayButtonLabel"
                    android:text="@string/previous" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_skip_previous_black_48dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonNext"
            style="@style/PlayerButton"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/PlayButtonLabel"
                    android:text="@string/next" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_skip_next_black_48dp" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="2">

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonPlay"
            style="@style/PlayerButton"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/buttonName"
                    style="@style/PlayButtonLabel"
                    android:text="@string/play" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_play_circle_filled_black_48dp" />


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/ButtonStop"
            style="@style/PlayerButton"
            card_view:cardBackgroundColor="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    style="@style/PlayButtonLabel"
                    android:text="@string/stop" />

                <ImageView
                    android:id="@+id/icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    app:srcCompat="@drawable/ic_stop_black_48dp" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>